# negativezero

./: .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  HANDOVER.md  README.md  TODO.md  index.html
.github/: dependabot.yml
.github/workflows/: admin-setcode.yml  admin.yml  bookmark-manager.yml  deploy.yml  docs.yml  landing.yml  platform.yml  presentation-studio.yml  redirector.yml  security.yml  timezones.yml  tts.yml  video-downloader.yml
01-footnote/: index.html
02-index/: index.html
03-paradox/: index.html
04-koch/: index.html
05-taylor/: index.html
06-attractor/: index.html
apps/admin/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
apps/bookmark-manager/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
apps/landing/: README.md  index.html
apps/presentation-studio/: Dockerfile  README.md  package-lock.json  package.json
apps/redirector/: .gitignore  Dockerfile  (+3 more)
apps/tts/: Dockerfile  EDITABLE_INSTRUCTIONS_TODO.md  README.md  SECURITY_AUDIT.md  pyproject.toml
apps/tts/backend/app/: auth.py  chunker.py  config.py  db.py  fts.py  glossary.py  groq_client.py  main.py  models.py  polish_queue.py  prompts.py  schema.sql  storage.py  transcript_sanitizer.py
apps/tts/backend/app/glossary_data/: builtin.json
apps/tts/backend/app/routes/: notes.py  prompts.py  settings.py  transcribe.py  transcriptions.py  usage.py
apps/tts/pwa/: app.js  index.html  live.html  live.js  manifest.webmanifest  styles.css  sw.js
apps/tts/shortcuts/: Amethyst Dictate.plist  Amethyst-Polish.shortcut  Amethyst-Proofread-Aggressive.shortcut  Amethyst-Proofread-Polish.shortcut  POLISH_AND_PROOFREAD.md  README.md  build_shortcut.py
apps/tts/tests/: conftest.py  test_auth.py  test_chunker.py  test_groq_errors.py  test_integration.py  test_shortcuts_transcribe.py  test_transcript_sanitizer.py
docs/: ACCOUNTS_PLAN.md  ACCOUNTS_PROGRESS.md  ARCHITECTURE.md  AUTH_AUDIT_2026-06-19.md  CITRINE_IMPLEMENTATION_REPORT.md  CLAUDE.md  DECISIONS.md  DEPLOY.md  DESIGN_SYSTEM.md  INDEX.md  PLAN.md  RUNBOOK.md  SYSTEM_DESIGN.md  TECH_DEBT.md  TESTING_STRATEGY.md  presentation-studio-progress.md
platform/: .env.template  backup.sh  deploy.sh  docker-compose.yml  negativezero-compose.service  seed-env-key.sh
scripts/: admin-setcode-remote.sh  validate-riga-routes.sh  verify-public-riga-routes.sh
(+243 files in other folders)
