[project]
name = "amethyst"
version = "0.1.0"
description = "Voice-to-text dictation service: iPhone Shortcut + PWA + open API, backed by Groq Whisper with LLM proofreading"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "groq>=0.13",
    "argon2-cffi>=23.1",
    "aiosqlite>=0.20",
    "python-ulid>=3.0",
    "httpx>=0.27",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
